--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
+<head>
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,800' rel='stylesheet' type='text/css'>
+</head>
+
+<body>
+<header class="grid-container">
+  <div class="grid-6">
+    <h1>hello!</h1>
+  </div>
+  <div class="grid-6">  
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Clients</a></li>
+        <li><a href="#">Contact Us</a></li>
+      </ul>
+    </nav>  
+  </div>
+</header>
+
+<article class="grid-container">
+  <section class="grid-7">
+    <h2>Are you ready for this?</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur vitae, temporibus nihil. Possimus adipisci sint saepe inventore, quo cupiditate magni expedita, culpa, ratione numquam voluptate veniam cumque voluptates quaerat. Eos.</p>
+  </section>
+  <section class="grid-5">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur vitae, temporibus nihil. Possimus adipisci sint saepe inventore, quo cupiditate magni expedita, culpa, ratione numquam voluptate veniam cumque voluptates quaerat. Eos.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita asperiores, quam, obcaecati explicabo a in voluptatibus blanditiis dignissimos illo, itaque optio ipsam error repellat excepturi tenetur illum. Libero, neque, placeat.</p>
+  </section>
+</article>
+
+<footer class="grid-container">
+  <div class="grid-9">
+    <ul>
+      <li><a href="mailto:myemail@gmail.com">email</a></li>
+       <li><a href="tel:5090000000">phone</a></li>
+      <li><a href="http://www.google.com">website</a></li>
+    </ul>  
+  </div>  
+  <div class="grid-3">
+    <h3>thanks for visiting!</h3>
+  </div>
+</footer>
+  
+</body>
 
